--- a/questionnaire.html
+++ b/questionnaire.html
@@ -193,6 +193,7 @@
                   <span>Do you have an "About Me" or "About Us" or Biography we should incorporate:</span
                   ><textarea
                     class="w-100 small"
+                    placeholder="(If so, please copy and paste here.)"
                     name="about"
                     onkeyup="adjust_textarea(this)"
                     required="false"
