Fine-tune colors

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     -- NAVBAR --
     ----------->
     <nav
-      class="navbar navbar-expand-md navbar-light px-4 border-bottom sticky-top"
+      class="navbar navbar-expand-md navbar-dark px-4 border-bottom sticky-top"
     >
       <!--LEFT NAV TEXT-->
-      <a class="navbar-brand d-md-none mt-2" href="#">ESOETHER</a>
+      <a class="navbar-brand d-md-none mt-2" href="#">Esoether</a>
       <!--NAV BUTTON-->
       <button
         class="navbar-toggler"
