--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       rel="stylesheet"
     />
 
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
     <script id="mcjs">
       !(function(c, h, i, m, p) {
         (m = c.createElement(h)),
