--- a/index.html
+++ b/index.html
@@ -119,14 +119,20 @@
     <!----------
     -- HEADER --
     ----------->
-    <header class="img-header">
+    <header
+      style="background: linear-gradient(
+      to right,
+      rgba(241, 241, 241, 0.8) 10%,
+      rgba(255, 255, 255, 0.9) 50%,
+      rgba(241, 241, 241, 0.8) 100%
+    ),
+    url(/star.png)
+      center center;"
+    >
       <!--OVERLAY-->
-      <div class="header-img">
-        <img src="logo2.png" style="max-width: 350px;" />
+      <div class="img-header header-img">
+        <img src="logo2.png" />
       </div>
-    </header>
-
-    <main>
       <!----------------
       -- HERO SECTION --
       ----------------->
@@ -147,13 +153,77 @@
           <!-- <div class="line-break mt-3"></div> -->
         </div>
       </section>
+    </header>
+
+    <main>
+      <!--------------------
+      -- SERVICES SECTION --
+      --------------------->
+      <section>
+        <div class="p-4 bg-dark">
+          <div class="row mx-0 text-center">
+            <div class="col-md-4">
+              <div class="bg-light py-4">
+                <i
+                  class="fab fa-pagelines display-4 py-2"
+                  style="background: -webkit-linear-gradient(#65ce24, #3c7a16);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+                ></i>
+                <h2>Clarity</h2>
+                <p class="px-4 mx-4">
+                  Your vision functions as our guide into the ether where we'll
+                  unlock your unique brand personality using numerology,
+                  astrology, and tarot. Together we'll discover who you are, who
+                  needs to know, and why they should care.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="bg-light py-4">
+                <i
+                  class="fas fa-moon display-4 py-2"
+                  style="background: -webkit-linear-gradient(rgb(176, 80, 255), #9320fe);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+                ></i>
+                <h2>Design</h2>
+                <p class="px-4 mx-4">
+                  All elements, symbols, typography, and colors are chosen
+                  intentionally to super-charge your brand's online vibration.
+                  We'll co-create a magnetic online presence that resonates with
+                  your authentic essence and attracts your ideal clientele.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="bg-light py-4">
+                <i
+                  class="fas fa-star display-4 py-2"
+                  style="background: -webkit-linear-gradient(#ffd250, #feaa20);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+                ></i>
+                <h2>Success</h2>
+                <p class="px-4 mx-4">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Cupiditate dolore animi quas minus labore consectetur, maiores
+                  sequi exercitationem cumque quos voluptas, atque eum enim
+                  architecto provident est. Et, cum reiciendis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-----------------
       -- INTRO SECTION --
       ------------------>
       <section>
         <div class="container-fluid bg-light">
-          <div class="mt-md-4 block moon-block bg-light">
+          <div class="block moon-block bg-light">
             <div class="row">
               <div
                 class="col-8 col-md-5 text-center text-md-right order-md-2 mx-auto"
@@ -179,61 +249,6 @@
                 </ul>
                 <a class="yellow" href="about.html">Read more...</a>
               </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!--------------------
-      -- SERVICES SECTION --
-      --------------------->
-      <section>
-        <div class="my-4 px-4">
-          <div class="row mx-0 text-center">
-            <div class="col-md-4 my-4">
-              <i
-                class="fab fa-pagelines display-4 py-2"
-                style="background: -webkit-linear-gradient(#65ce24, #3c7a16);
-              -webkit-background-clip: text;
-              -webkit-text-fill-color: transparent;"
-              ></i>
-              <h2>Clarity</h2>
-              <p class="px-4 mx-4">
-                Your vision functions as our guide into the ether where we'll
-                unlock your unique brand personality using numerology,
-                astrology, and tarot. Together we'll discover who you are, who
-                needs to know, and why they should care.
-              </p>
-            </div>
-            <div class="col-md-4 my-4">
-              <i
-                class="fas fa-moon display-4 py-2"
-                style="background: -webkit-linear-gradient(rgb(176, 80, 255), #9320fe);
-              -webkit-background-clip: text;
-              -webkit-text-fill-color: transparent;"
-              ></i>
-              <h2>Design</h2>
-              <p class="px-4 mx-4">
-                All elements, symbols, typography, and colors are chosen
-                intentionally to super-charge your brand's online vibration.
-                We'll co-create a magnetic online presence that resonates with
-                your authentic essence and attracts your ideal clientele.
-              </p>
-            </div>
-            <div class="col-md-4 my-4">
-              <i
-                class="fas fa-star display-4 py-2"
-                style="background: -webkit-linear-gradient(#ffd250, #feaa20);
-              -webkit-background-clip: text;
-              -webkit-text-fill-color: transparent;"
-              ></i>
-              <h2>Success</h2>
-              <p class="px-4 mx-4">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Cupiditate dolore animi quas minus labore consectetur, maiores
-                sequi exercitationem cumque quos voluptas, atque eum enim
-                architecto provident est. Et, cum reiciendis.
-              </p>
             </div>
           </div>
         </div>
