--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <section>
         <div class="p-4 bg-dark">
           <div class="row mx-0 text-center">
-            <div class="col-md-4">
+            <div class="col-md-4 my-3">
               <div class="bg-light py-4">
                 <i
                   class="fab fa-pagelines display-4 py-2"
@@ -180,7 +180,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 my-3">
               <div class="bg-light py-4">
                 <i
                   class="fas fa-moon display-4 py-2"
@@ -197,7 +197,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 my-3">
               <div class="bg-light py-4">
                 <i
                   class="fas fa-star display-4 py-2"
