--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
       <!--------------------
       -- SERVICES SECTION --
       --------------------->
-      <section>
+      <section id="services_section">
         <div class="p-4 bg-dark">
           <div class="row mx-0 text-center">
-            <div class="col-md-4 my-3">
+            <div class="col-lg-4 my-3">
               <div class="bg-light py-4">
                 <i
                   class="fab fa-pagelines display-4 py-2"
@@ -177,10 +177,11 @@
                   astrology, and tarot. Together we'll discover who you are, who
                   needs to know, and why they should care.
                 </p>
+                <button class="services-button">Learn More</button>
               </div>
             </div>
 
-            <div class="col-md-4 my-3">
+            <div class="col-lg-4 my-3">
               <div class="bg-light py-4">
                 <i
                   class="fas fa-moon display-4 py-2"
@@ -195,9 +196,10 @@
                   We'll co-create a magnetic online presence that resonates with
                   your authentic essence and attracts your ideal clientele.
                 </p>
+                <button class="services-button">View Our Work</button>
               </div>
             </div>
-            <div class="col-md-4 my-3">
+            <div class="col-lg-4 my-3">
               <div class="bg-light py-4">
                 <i
                   class="fas fa-star display-4 py-2"
@@ -212,6 +214,7 @@
                   sequi exercitationem cumque quos voluptas, atque eum enim
                   architecto provident est. Et, cum reiciendis.
                 </p>
+                <button class="services-button">Testimonials</button>
               </div>
             </div>
           </div>
