--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   We'll co-create a magnetic online presence that resonates with
                   your authentic essence and attracts your ideal clientele.
                 </p>
-                <button class="services-button">View Our Work</button>
+                <button class="services-button">Our Services</button>
               </div>
             </div>
             <div class="col-lg-4 my-3">
@@ -214,7 +214,7 @@
                   sequi exercitationem cumque quos voluptas, atque eum enim
                   architecto provident est. Et, cum reiciendis.
                 </p>
-                <button class="services-button">Testimonials</button>
+                <button class="services-button">Portfolio</button>
               </div>
             </div>
           </div>
