--- a/qmt/testimonials.html
+++ b/qmt/testimonials.html
@@ -34,7 +34,6 @@
     ></script>
 
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="services.css" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Aref+Ruqaa:700|Josefin+Sans:400,700&display=swap"
@@ -141,102 +140,48 @@
         </div>
       </nav>
     </div>
+    <!----------------------
+    - TESTIMONIALS SECTION -
+    ----------------------->
+    <section id="testimonialsSection">
+      <div class="container p-0">
+        <div class="bg-purple my-4">
+          <div class="py-lg-4">
+            <div class="row m-0 py-4">
+              <div
+                class="col-12 text-white text-center my-2 d-flex flex-column justify-content-center"
+              >
+                <h1>TESTIMONIALS</h1>
+                <p class="lead text-light">
+                  Read what my clients have to say.
+                </p>
+              </div>
+              <div
+                class="col-12 p-0 p-lg-4 d-flex align-items-center order-2 order-lg-1"
+              >
+                <div class="button"><i class="fas fa-chevron-left"></i></div>
+                <div class="testimonials w-100 mx-lg-4 bg-light p-4">
+                  <h1><i class="fas fa-quote-left"></i></h1>
+                  <p class="text-center">
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Corrupti cum, fuga eveniet blanditiis reiciendis, earum
+                    accusamus deserunt a ea, non dolor labore! Animi culpa
+                    consectetur temporibus commodi eum numquam dignissimos."
+                  </p>
+                  <p class="text-center" style="font-size: 20px;">
+                    – Noelle H.
+                  </p>
+                </div>
+                <div class="button"><i class="fas fa-chevron-right"></i></div>
+              </div>
 
-    <div class="container-fluid my-4 pb-4">
-      <div class="row px-4 mx-lg-4 text-center">
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Tarot Readings</h3>
-            <p>
-              Tarot cards are used to gain insight, clarity, and achieve greater
-              control over and understanding of issues involving relationships,
-              life changes, family, career, health, spirituality, and dreams. I
-              use the tarot cards to confirm the answers I am seeing to your
-              questions.
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Birth Charts</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Custom Spreads</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>New/Full Moon Readings</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Numerology</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Personalized Affirmations</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Insightful Worksheets</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Community</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
+              
+            </div>
           </div>
         </div>
       </div>
-    </div>
-
-   <!--------
+    </section>
+    <!--------
     - FOOTER -
     --------->
     <!-- Footer -->
