--- a/qmt/index.html
+++ b/qmt/index.html
@@ -51,7 +51,9 @@
     - TOP NAV -
     ---------->
       <nav class="navbar bg-primary navbar-dark px-4 shadow-sm" id="topNav">
-        <i class="fab fa-facebook"></i>
+        <a href="https://www.facebook.com/queenmachetetarot/" target="_blank"
+          ><i class="fab fa-facebook"></i
+        ></a>
         <!--NAV BUTTON-->
         <div class="d-lg-none">
           <button
@@ -96,7 +98,7 @@
           <div class="w-50"></div>
           <!-- LOGO -->
           <div class="logo">
-            <a class="navbar-brand mr-0 text-center" href="#"
+            <a class="navbar-brand mr-0 text-center" href="index.html"
               ><h1>Queen Machete</h1>
               <h2>Tarot</h2></a
             >
@@ -111,10 +113,10 @@
           <!--Left Links-->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Testimonials</a>
+              <a class="nav-link" href="testimonials.html">Testimonials</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link ml-4" href="#">Contact</a>
+              <a class="nav-link ml-4" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -129,10 +131,10 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Testimonials</a>
+              <a class="nav-link" href="testimonials.html">Testimonials</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -149,7 +151,7 @@
           <p class="lead text-light">
             Faciliatate your healing and reclaim your personal power.
           </p>
-          <button class="btn btn-primary my-3">Learn More</button>
+          <button class="btn btn-primary my-3"><a href="services.html">Learn More</a></button>
         </div>
       </div>
     </section>
@@ -326,7 +328,7 @@
       </div>
     </section>
 
-    <div class="bg-white container p-4 mb-5 mb-lg-0">
+    <div class="bg-white container p-4 mb-5">
       <section id="aboutSection">
         <div class="container p-0">
           <div class="bg-white my-4">
@@ -352,7 +354,7 @@
                     alt=""
                   />
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-lg-4 mt-4">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Repudiandae et omnis enim, eius vero quidem quod delectus?
@@ -370,7 +372,7 @@
     - FOOTER -
     --------->
     <!-- Footer -->
-    <footer class="page-footer font-small bg-dark pt-4">
+    <footer class="page-footer font-small pt-4">
       <!-- Footer Links -->
       <div class="container text-center text-md-left">
         <!-- Grid row -->
@@ -379,60 +381,42 @@
           <div class="col-12 mx-auto">
             <!-- Content -->
             <div class="logo">
-              <a class="navbar-brand mr-0 text-center" href="index.html"
+              <!-- <a class="navbar-brand mr-0 text-center" href="index.html"
                 ><h1>Queen Machete</h1>
                 <h2>Tarot</h2></a
-              >
+              > -->
             </div>
           </div>
           <!-- Grid column -->
 
-          <div
-            class="text-center col-12 mx-auto"
-          >
-            <div class="my-2">
+          <div class="text-center col-12 mx-auto">
+            <!-- <div class="my-2">
               <a href="#!" class="btn bg-secondary text-muted">Get in Touch!</a>
-            </div>
+            </div> -->
           </div>
         </div>
         <!-- Grid row -->
       </div>
       <!-- Footer Links -->
 
-      <hr />
+      <!-- <hr /> -->
 
       <!-- Social buttons -->
       <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
           <a class="btn-floating btn-fb mx-1">
-            <i class="fab fa-facebook-f"> </i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-tw mx-1">
-            <i class="fab fa-twitter"> </i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-gplus mx-1">
-            <i class="fab fa-google-plus-g"> </i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-li mx-1">
-            <i class="fab fa-linkedin-in"> </i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-dribbble mx-1">
-            <i class="fab fa-dribbble"> </i>
+            <a
+              href="https://www.facebook.com/queenmachetetarot/"
+              target="_blank"
+              ><i class="fab fa-facebook-f"> </i
+            ></a>
           </a>
         </li>
       </ul>
       <!-- Social buttons -->
 
       <!-- Copyright -->
-      <div class="bg-secondary text-center py-3">
+      <div class="bg-secondary text-center py-3 text-muted">
         © 2020 Copyright:
         <a href="https://queenmachete.com"> Queen Machete Tarot</a>
         <br />
