--- a/qmt/contact.html
+++ b/qmt/contact.html
@@ -34,7 +34,6 @@
     ></script>
 
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="services.css" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Aref+Ruqaa:700|Josefin+Sans:400,700&display=swap"
@@ -142,126 +141,50 @@
       </nav>
     </div>
 
-    <div class="container-fluid my-4 pb-4">
-      <div class="row">
-        <div class="container-fluid px-4 mx-lg-4">
-          <div class="col-12">
-            <h3 class="text-center text-white">
-              How can I help you on your spiritual journey?
-            </h3>
-            <h4 class="text-center text-light">Take a look at the ways we can use metaphysical tools for introspection.</h4>
+    <div class="container my-4 contact_container">
+      <div class="text-light p-lg-4">
+        <h2 class="p-4 text-center">I'd love to hear from you</h2>
+        <div class="row m-0">
+          <div class="px-4 col-12 col-lg-12">
+            <div class="container">
+              <div class="row">
+                <div class="mb-4 mb-md-0 col-sm-12 col-md-6 col-lg-6 col-xs-offset-3">
+                  <p>Feel free to get in touch with me. I am always open to discussing how I can help you meet your spiritual needs and gain the clarity you deserve as you move forward on your path.</p>
+                  <p>For the quickest response, or to book a reading, please connect with me on Facebook.</p>
+                  <a href="mailto:queenmachetetarot@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> queenmachetetarot@gmail.com</a>
+                  <br><br>
+                  <a href="https://www.facebook.com/queenmachetetarot/" target="_blank"><i class="fab fa-facebook"></i> Find Me on Facebook</a>
+                  
+                </div>
+                  <div class="card mt-3 mt-md-0 col-md-6 col-lg-6 col-xs-offset-3">
+                      <form id="contact-form" class="form" action="#" method="POST" role="form">
+                          <div class="form-group">
+                              <label class="form-label" for="name">Your Name</label>
+                              <input type="text" class="form-control" id="name" name="name" placeholder="Your name" tabindex="1" required>
+                          </div>                            
+                          <div class="form-group">
+                              <label class="form-label" for="email">Your Email</label>
+                              <input type="email" class="form-control" id="email" name="email" placeholder="Your Email" tabindex="2" required>
+                          </div>                            
+                          <div class="form-group">
+                              <label class="form-label" for="subject">Subject</label>
+                              <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" tabindex="3">
+                          </div>                            
+                          <div class="form-group">
+                              <label class="form-label" for="message">Message</label>
+                              <textarea rows="5" cols="50" name="message" class="form-control" id="message" placeholder="Message..." tabindex="4" required></textarea>                                 
+                          </div>
+                          <div class="text-center">
+                              <button type="submit" class="btn btn-light">Send Message</button>
+                          </div>
+                      </form>
+                  </div>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <!--Cards-->
-      <div class="row px-4 mx-lg-4 text-center">
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Tarot Readings</h3>
-            <p>
-              Tarot cards are used to gain insight, clarity, and achieve greater
-              control over and understanding of issues involving relationships,
-              life changes, family, career, health, spirituality, and dreams. I
-              use the tarot cards to confirm the answers I am seeing to your
-              questions.
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Birth Charts</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Custom Spreads</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>New/Full Moon Readings</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Numerology</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Personalized Affirmations</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Insightful Worksheets</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Community</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!--Payment-->
-      <div class="row pt-4 mx-lg-4 text-center text-light">
-        <div class="col-12 mt-4">
-          <p class="text-center">
-            Now offering multiple payment options:
-          </p>
-          <ul class="text-center list-unstyled">
-            <li>- FB Pay via Messenger (Joaly Nicole)</li>
-            <li>- paypal.me/queenmachete</li>
-            <li>- CashApp: $JoalyNicole</li>
-            <li>- Venmo: @Joaly-Cruz</li>
-          </ul>
         </div>
       </div>
     </div>
-
     <!--------
     - FOOTER -
     --------->
