--- a/qmt/index.html
+++ b/qmt/index.html
@@ -151,7 +151,7 @@
           <p class="lead text-light">
             Faciliatate your healing and reclaim your personal power.
           </p>
-          <button class="btn btn-primary my-3"><a href="services.html">Learn More</a></button>
+          <a href="services.html"><button class="btn btn-primary my-3">Learn More</button></a>
         </div>
       </div>
     </section>
@@ -299,7 +299,8 @@
                 class="col-lg-7 p-0 p-lg-4 d-flex align-items-center order-2 order-lg-1"
               >
                 <div class="button"><i class="fas fa-chevron-left"></i></div>
-                <div class="testimonials w-100 mx-lg-4 bg-light p-4">
+                <div class="testimonials w-100 mx-lg-4">
+                  <div class="bg-light p-4">
                   <h1><i class="fas fa-quote-left"></i></h1>
                   <p class="text-center">
                     "Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -311,15 +312,25 @@
                     – Noelle H.
                   </p>
                 </div>
+                <div class="testimonials_photos mt-4">
+                  <div class="row text-center d-flex justify-content-center">
+                    <img class="testimonials_img" src="bg.jpg">
+                    <img class="testimonials_img" src="bg.jpg">
+                    <img class="testimonials_img" src="bg.jpg">
+                    <img class="testimonials_img" src="bg.jpg">
+                    <img class="testimonials_img" src="bg.jpg">
+                  </div>
+                </div>
+                </div>
                 <div class="button"><i class="fas fa-chevron-right"></i></div>
               </div>
 
               <div
-                class="col-lg-5 text-white text-center text-lg-left my-2 order-1 d-flex flex-column justify-content-center"
+                class="col-lg-5 text-white text-center text-lg-left my-2 order-1 d-flex flex-column mt-lg-4"
               >
                 <h1>DOZENS OF FIVE STAR REVIEWS</h1>
                 <p class="lead text-light">
-                  Read more glowing testimonials here.
+                  Read more glowing testimonials <a class="text-muted" href="testimonials.html">here.</a>
                 </p>
               </div>
             </div>
